Versión definitiva web

--- a/index.html
+++ b/index.html
@@ -1,10 +1,65 @@
+
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Mi primera página web</title>
-</head>
-<body>
-    <h1>Proyecto de la primera página web para el MOOC</h1>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Página de ejemplo del MOOC de LINUX - UPM.">
+    <!--Sustituir por los datos del alumno-->
+    <meta name="author" content="Jorge Rascado">
+
+    <!--Sustituir por los datos del alumno-->
+    <title>Jorge Rascado</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+  </head>
+
+  <body>
+    <div class="container header-bar">
+      <!--Sustituir por los datos del alumno-->
+      <h3>Jorge Rascado<a href="https://twitter.com/rafaelnadal"> <span><img style="width: 200px; height: 150px;" class='img-circle' alt="Jorge Rascado" src="img/foto.png" align="right"></span></a></h3>
+      <!-- URL foto: https://pixabay.com/es/ovejas-cara-la-cabeza-gracioso-48210/ -->
+      <p>
+        <!--Sustituir por los datos del alumno-->
+        Posición: inicial<br>
+        Departamento: computacional<br>
+        Organización: pública
+      </p>
+      <address>
+        <!--Sustituir por los datos del alumno-->
+        <span class='glyphicon glyphicon-pencil'></span> orgeweb@gmail.com <br>
+      </address>
+
+      <!--Sustituir por los datos del alumno-->
+      <p><a href="https://twitter.com/rafaelnadal" target="blank"><img src="img/twitter-icon.jpg" width=25></a>
+      <!--Sustituir por los datos del alumno-->
+      <a href="http://github.com/usuario" target="blank"><img src="img/github-icon.png" width=25></a>
+      <!--Sustituir por los datos del alumno-->
+      <a href="https://es.linkedin.com/in/usuario" target="blank"><img src="img/linkedin-icon.png" width=25></a>
+    </div>
+
+    <div class="container">
+      <div class='row'>
+        <div class='col-sm-8'>
+          <br>
+          <p>Actualmente me encuentro en proceso de formación en distintos aspectos tecnológicos, esperando que eso me permita acceder al mercado laboral en un futuro no muy lejano.</p>
+          
+          <p>Me gustaría seguir mi formación en espectos relacionados con Big Data e IoT, que creo va a ser hacia donde se orienten las nuevas profesiones.</p>
+
+          <h3>Cursos</h3>
+          <table class='table table-striped'>
+            <tr><td><a href="https://www.miriadax.net" target="blank">Introducción a Linux como entorno de desarrollo de sistemas software</a>.</td></tr>
+            <tr><td><a href="https://miriadax.net/web/gitmooc" target="blank">Gestión de proyectos software con Git y GitHub</a></td></tr>
+            <tr><td><a href="https://miriadax.net/web/seguridad-informatica-practica" target="_blank">Seguridad informática práctica</a></td></tr>
+          </table>
+        </div>
+      </div>
+
+      <footer class="footer">
+        <!--Sustituir por los datos del alumno-->
+        <p>&copy; Jorge Rascado - 2018</p>
+      </footer>
+
+    </div>
+  </body>
 </html>
